--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/native": "^7.1.17",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
