--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,15 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.0.1",
     "@react-navigation/native": "^7.1.17",
+    "drizzle-orm": "^0.44.6",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.7",
     "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
