--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.1.17",
     "drizzle-orm": "^0.44.6",
     "expo": "~54.0.9",
+    "expo-av": "~14.0.6",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
