--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,11 +1,10 @@
 {
   "expo": {
-    "name": "app",
-    "slug": "app",
+    "name": "FocusTrack",
+    "slug": "focus-track",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "app",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -17,6 +16,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.focustrack.app",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -35,6 +36,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "8adda4cb-0659-4b32-ad46-56126deac257"
+      }
     }
   }
 }
