--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "^5.0.1",
     "@react-navigation/native": "^7.1.17",
     "drizzle-orm": "^0.44.6",
     "expo": "~54.0.9",
-    "expo-av": "~14.0.6",
+    "expo-av": "~16.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
