--- a/frontend/app.json
+++ b/frontend/app.json
@@ -29,12 +29,15 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-sqlite"
-    ],
+    "plugins": ["expo-router", "expo-sqlite"],
     "experiments": {
       "typedRoutes": true
+    },
+
+    "expo": {
+      "notifications": {
+        "sounds": ["bell.wav"]
+      }
     }
   }
 }
