--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "drizzle-orm": "^0.44.6",
     "expo": "~54.0.9",
     "expo-av": "~16.0.7",
+    "expo-background-fetch": "~14.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-linking": "~8.0.8",
@@ -25,6 +26,7 @@
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.8",
     "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
