--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,10 +1,11 @@
 {
   "expo": {
-    "name": "FocusTrack",
-    "slug": "focus-track",
+    "name": "app",
+    "slug": "app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
+    "scheme": "app",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -16,8 +17,6 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.focustrack.app",
-      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -30,15 +29,12 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-sqlite"],
+    "plugins": [
+      "expo-router",
+      "expo-sqlite"
+    ],
     "experiments": {
       "typedRoutes": true
-    },
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "8adda4cb-0659-4b32-ad46-56126deac257"
-      }
     }
   }
 }
